# MemoryMCP

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.sandbox  IMPROVEMENTS.md  README.md  TESTING.md  TROUBLESHOOTING.md  _api_test.py  _check_skill_prompt.py  _fix_path.py  _split_tools.py  _test_rollback_500.py  admin_tools.py  analysis_utils.py  check_equipment.py  check_qdrant.py  config.json  config_utils.py  context.json  context_python.json  coverage.json  dashboard.py  db_utils.py  docker-compose.yml  knowledge_graph_nilou_20251101_183052.html  lefthook.yml  mcp.py  memory_mcp.py  migrate_memories.py  migrate_to_qdrant.py  package-lock.json  persona_utils.py  pyproject.toml  (+13 more)
.agent/handoff/: 2026-05-13-2330.md  2026-05-15-2300.md  2026-06-07-2230.md  2026-06-08-2350.md  2026-06-20-1600.md  2026-06-20-2100.md  2026-06-21-1856.md  (+5 more)
.claude/: settings.local.json
.github/: .gitignore_global  copilot-instructions.md  dependabot.yml
.opencode/: opencode.json
.serena/: project.yml
.spec/: KNOWLEDGE.md  PLAN.md  PROPOSAL-sillytavern.md  SPEC-v3-sillytavern.md  SPEC.md  TEST_PLAN.md  TEST_RESULTS.md  TODO-v3.md  TODO.md
config/: README.md
core/: __init__.py  async_queue.py  equipment_db.py  forgetting.py  memory_blocks_db.py  memory_db.py  persona_context.py  time_utils.py  user_state_db.py
docs/: README_FULL.md  check_qdrant_README.md  claude_desktop_setup.md  http_api_reference.md  llm_usage_guide.md  mcp_research_2026-06-27.md  memory_decay_research_2026-06-29.md  memory_features.md  memory_operation_flowchart.md  refactoring_suggestions.md  sandbox.md
memory_mcp/: __init__.py  main.py
nous/: __init__.py  main.py
scripts/: count_tools.py  debug_equipment.py  detail_investigation.py  investigate_bugs.py  migrate_schema.py  setup_agent_browser.sh  start_local_qdrant.sh  test_mcp_http.py  test_read_memory_fix.py  test_search_accuracy.py  test_update_memory.py  verify_all.py  verify_fixes.py
src/: admin_tools.py  dashboard.py  resources.py
templates/: dashboard.html
tests/: conftest.py  migrate_schema.py  test_http_api.py  test_search_accuracy.py
tools/: __init__.py  analysis_tools.py  association.py  context_tools.py  crud_tools.py  equipment_tools.py  item_memory_tools.py  knowledge_graph_tools.py  search_tools.py  summarization_tools.py  unified_tools.py  unified_tools.py.backup  vector_tools.py
(+505 files in other folders)
